--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "wayock",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "brew": "0.0.8",
     "express": "^4.17.1",
