--- a/package.json
+++ b/package.json
@@ -13,9 +13,13 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "brew": "0.0.8",
+    "clarifai": "^2.9.1",
     "cors": "^2.8.5",
+    "dotenv": "^5.0.0",
     "express": "^4.17.1",
+    "knex": "^0.20.2",
     "nodemon": "^1.19.4",
+    "pg": "^7.12.1",
     "update": "^0.7.4"
   }
 }
